package com.maintenx.model.enums;
public enum Priorite { BASSE, MOYENNE, HAUTE, URGENTE }
