package com.maintenx.model.enums;
public enum Role { ADMINISTRATEUR, RESPONSABLE, TECHNICIEN }
