package com.maintenx.model.enums;
public enum StatutIntervention { OUVERTE, AFFECTEE, EN_COURS, EN_ATTENTE, TERMINEE, ANNULEE }
